--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         </activity>
         <activity android:name=".custom_search" />
         <activity android:name=".Movie_info" />
-        <activity android:name=".Cast_display"></activity>
+        <activity android:name=".Cast_display" />
+        <activity android:name=".Similar_movie" />
+        <activity android:name=".trailer"></activity>
     </application>
 
 </manifest>
