--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity android:name=".Cast_display" />
         <activity android:name=".Similar_movie" />
         <activity android:name=".trailer" />
-        <activity android:name=".Cast_data"></activity>
+        <activity android:name=".Cast_data" />
+        <activity android:name=".Search_Results"></activity>
     </application>
 
 </manifest>
